# ptolemy

./: pyproject.toml  run  sq_finding.sh
