[tool.poetry]
name = "ptolemy"
version = "0.1.0"
description = ""
authors = ["semcit <semcit@nysbc.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
numpy = "^1.24.1"
pandas = "^1.5.3"
torch = "^1.13.1"
scipy = "^1.10.0"
scikit-image = "^0.19.3"
matplotlib = "^3.6.3"
gpytorch = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
